# kopds-app

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  compose.yaml  vcpkg.json
.github/workflows/: docker.yml
db/migrations/: 001_initial.sql
docs/: erd.mermaid
src/: main.cpp
src/bootstrap/: KopdsApplication.cpp  KopdsApplication.h
src/contexts/contribution_configuration/application/: ContributionTypeRepository.h  ContributionTypeService.cpp  ContributionTypeService.h
src/contexts/contribution_configuration/domain/: ContributionType.h
src/contexts/contribution_configuration/infrastructure/: PostgresContributionTypeRepository.cpp  PostgresContributionTypeRepository.h
src/contexts/contribution_configuration/presentation/: ContributionTypesPage.cpp  ContributionTypesPage.h
src/contexts/membership/application/: MemberRepository.h  MemberService.cpp  MemberService.h
src/contexts/membership/domain/: Member.h
src/contexts/membership/infrastructure/: PostgresMemberRepository.cpp  PostgresMemberRepository.h
src/contexts/membership/presentation/: MembersPage.cpp  MembersPage.h
src/contexts/system_health/application/: GetSystemStatus.cpp  GetSystemStatus.h  HealthCheck.h
src/contexts/system_health/domain/: ComponentHealth.h
src/contexts/system_health/infrastructure/: PostgresHealthCheck.cpp  PostgresHealthCheck.h
src/contexts/system_health/presentation/: SystemStatusPage.cpp  SystemStatusPage.h
src/shared/infrastructure/: Database.cpp  Database.h
src/shared/presentation/: ConfirmationDialog.cpp  ConfirmationDialog.h
src/shell/: AppShell.cpp  AppShell.h  DashboardPage.cpp  DashboardPage.h  NotFoundPage.cpp  NotFoundPage.h
static/css/: app.css
testresults/iteration2/: new_member_failed_query.txt
